# erm

./: .gitignore  Cargo.toml  README.md
erm/: Cargo.toml  test.sqlite3
erm-derive/: Cargo.toml
erm-derive/src/: api.rs  archetype.rs  attributes.rs  component.rs  field.rs  lib.rs  queries.rs  reflect.rs  serde.rs
erm-example/: Cargo.toml
erm-example/src/: main.rs
erm/docs/: mapping.md
erm/src/: archetype.rs  backend.rs  component.rs  condition.rs  const.rs  create.rs  cte.rs  entity.rs  indent.rs  insert.rs  lib.rs  offsets.rs  reflect.rs  row.rs  select.rs  serialization.rs  tables.rs  types.rs
erm/src/backend/: mysql.rs  postgres.rs  sqlite.rs
examples/conditions/: Cargo.toml
examples/conditions/src/: main.rs
examples/enums/: Cargo.toml
examples/enums/src/: main.rs
examples/markers/: Cargo.toml
examples/markers/src/: main.rs
examples/optional/: Cargo.toml
examples/optional/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/with_without/: Cargo.toml
examples/with_without/src/: main.rs
