[workspace]
resolver = "2"
members = ["erm", "erm-derive", "erm-example"]

[workspace.dependencies]
erm = { path = "erm" }
erm-derive = { path = "erm-derive" }

sqlx = { version = "*" }
tokio = { version = "*" }
async-trait = { version = "*" }
futures = { version = "*" }
uuid = { version = "*", features = ["v4"] }
