[workspace]
resolver = "2"
members = ["erm", "erm-derive", "examples/*"]

[workspace.dependencies]
erm = { path = "erm" }
erm-derive = { path = "erm-derive" }

sqlx = { version = "0.8.2" }
tokio = { version = "1.40.0" }
async-trait = { version = "0.1.83" }
futures = { version = "0.3.30" }
uuid = { version = "1.10.0", features = ["v4"] }
async-stream = { version = "0.3.5" }
