[package]
name = "erm-example"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true }
erm = { workspace = true, features = ["sqlite", "uuid", "derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true, features = ["runtime-tokio"] }
futures = { workspace = true }
