[package]
name = "erm"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite", "uuid"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
uuid = ["dep:uuid", "sqlx/uuid"]

[dependencies]
uuid = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["postgres"] }
async-trait = { workspace = true }
futures = { workspace = true }
const_format = "0.2.32"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
