[package]
name = "erm"
version = "0.1.0"
edition = "2021"

[features]
derive = ["dep:erm-derive"]

sqlite = ["sqlx/sqlite", "erm-derive/sqlite"]
postgres = ["sqlx/postgres", "erm-derive/postgres"]
mysql = ["sqlx/mysql", "erm-derive/mysql"]
uuid = ["dep:uuid", "sqlx/uuid"]

[dependencies]
erm-derive = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
const_format = "0.2.32"
tracing = "0.1.40"
async-stream = "0.3.5"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
